--- a/style.css
+++ b/style.css
@@ -49,3 +49,12 @@ body {
     opacity: 0.5;
     pointer-events: none;
 }
+
+.home-button {
+    width: 30px;
+    height: 30px;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    cursor: pointer;
+}
